Name:                shop
Version:             0.1
Synopsis:            Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp
Homepage:            https://github.com/adzeitor
Bug-reports:         https://github.com/adzeitor
License:             BSD3
License-file:        LICENSE
Author:              Andrew Farmer <anfarmer@ku.edu>
Maintainer:          Andrew Farmer <anfarmer@ku.edu>
Copyright:           (c) 2012 Alex Voikov
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  A Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp.
  .
  @
    &#123;-&#35; LANGUAGE OverloadedStrings &#35;-&#125;
    .
    import Web.Scotty
    .
    import Data.Monoid (mconcat)
    .
    main = scotty 3000 $ do
    &#32;&#32;get &#34;/:word&#34; $ do
    &#32;&#32;&#32;&#32;beam <- param &#34;word&#34;
    &#32;&#32;&#32;&#32;html $ mconcat [&#34;&#60;h1&#62;Scotty, &#34;, beam, &#34; me up!&#60;/h1&#62;&#34;]
  @
  .
  .
  Scotty is the cheap and cheerful way to write RESTful, declarative web applications.
  .
    * A page is as simple as defining the verb, url pattern, and Text content.
  .
    * It is template-language agnostic. Anything that returns a Text value will do.
  .
    * Conforms to WAI Application interface.
  .
    * Uses very fast Warp webserver by default.
  .
  This design has been done in Haskell at least once before (to my knowledge) by
  the miku framework. My issue with miku is that it uses the Hack2 interface
  instead of WAI (they are analogous, but the latter seems to have more traction),
  and that it is written using a custom prelude called Air (which appears to be an
  attempt to turn Haskell into Ruby syntactically). I wanted something that
  depends on relatively few other packages, with an API that fits on one page.
  .
  As for the name: Sinatra + Warp = Scotty.
  .
  [WAI] <http://hackage.haskell.org/package/wai>
  .
  [Warp] <http://hackage.haskell.org/package/warp>

Extra-source-files:
    README
    examples/basic.hs
    examples/json.hs
    examples/options.hs
    examples/urlshortener.hs
    examples/static/jquery.js
    examples/static/jquery-json.js
    examples/static/json.js

Executable shop
  -- .hs or .lhs file containing the Main module.
  Main-is: shop.hs
  default-language:    Haskell2010
  build-depends:       aeson            ,
                       base             ,
                       bytestring       ,
                       http-conduit     ,
                       http-types       ,
                       split,
                       uuid,
                       random,
                       conduit          ,
                       ghc-prim,
                       utf8-string,
                       happstack-server,
                       couchdb-conduit  ,
                       data-default     ,
                       mtl              ,
                       text             ,
                       time,
                       pandoc           ,
                       wai              ,
                       warp             ,
                       wai-extra

  GHC-options:  -fno-warn-orphans

source-repository head
  type:     git
  location: git://github.com/xich/scotty.git
